why did I miss this